After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745780 - gl: Accepts downloading in RGB with BT709 colorspace (wrong colors)
gl: Accepts downloading in RGB with BT709 colorspace (wrong colors)
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal major
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-07 09:37 UTC by Sebastian Dröge (slomo)
Modified: 2015-03-09 11:17 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastian Dröge (slomo) 2015-03-07 09:37:26 UTC
gst-launch-1.0 videotestsrc ! gleffects ! "video/x-raw,format=RGBA,colorimetry=bt709" ! videoconvert ! ximagesink

BT709 does not make much sense for RGB, but it should also not cause the colors to be completely off :) BT601 gives other wrong colors.

It should probably just fail negotiation instead of being artistic :)
Comment 1 Matthew Waters (ystreet00) 2015-03-07 10:41:03 UTC
heh, taking gleffects out produces the same output which suggests an issue with videoconvert.  Replacing ximagesink/xvimagesink with glimagesink fixes the colours though as videoconvert doesn't have to convert then.
Comment 2 Wim Taymans 2015-03-09 10:56:39 UTC
yeah, video-convert should check if the source is RGB already instead of blindly using the matrix to convert to RGB :), will fix.
Comment 3 Wim Taymans 2015-03-09 11:17:25 UTC
commit 8296cdbfd58b6a6d59bd118e9e7e974f721c6066
Author: Wim Taymans <wtaymans@redhat.com>
Date:   Mon Mar 9 12:13:44 2015 +0100

    video-converter: only convert to/from rgb when needed
    
    Only use the YUV->RGB matrix when we have YUV as input and only use the
    matrix when we need to make YUV output.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=745780